assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap');
*{
	margin:0;
	padding:0;
	box-sizing: border-box;
	list-style: none;
	text-decoration: none;
	font-family: 'Lato', sans-serif;
}
body{
	background-color: #ededed;
}
header{
	width: 100%;
	height: 15vh;
	background-color:#fff;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.menuLeft{
	display: flex;
	align-items: center;
	margin-left: 120px;
	cursor: pointer;
}
.menuLeft span{
	color: #24ca68;
	font-size: 2rem;
	font-weight: 700;
	margin-left: 5px;
}
.menuOpener{
	display: none;
}
.menuRight{
	display: flex;
	margin-right: 120px;
}
.menuRight form{
	margin-right: 30px;
}
.menuRight form input{
	padding:10px 140px 10px 8px;
	border-radius: 5px;
	border:1px solid #ced4da;
	cursor: default;
}
.alertDiv{
	border: 1px solid #ccc;
	border-radius: 5px;
	background-color: #fff;
	color: #989898;
	margin-top: 5px;
	opacity: 0;
	transition: all ease 0.3s;
	padding:10px 0;
	width: 325px;
	text-align: center;
	position: absolute;
	z-index: 2;
}
 [placeholder]{
	font-size: 1rem;
}
form .btnSearch{
	background:transparent;
	border:none;
	border-left:1px solid #ced4da;
	padding-left: 20px;
	margin-left: -60px;
	outline: 0;
}
form .btnSearch .fas.fa-search{
	font-size: 22px;
	color: #25ca68;
}
.menuRight nav{
	display: flex;
	align-items: center;
}
.menuRight nav ul{
	display: flex;
	align-items: center;
}
.menuRight nav ul li{
	margin-right: 20px;
}
.menuRight nav ul li:first-child{
	margin-right: 30px;
}
.menuRight nav ul li:last-child{
	margin-right: 0;
	background-color: #24ca68;
	padding:13px 15px;
	border-radius: 5px;
	cursor: pointer;
}
.menuRight nav ul li:last-child:hover{
	background-color: #20b55d;
}
.menuRight nav ul li:nth-child(2) a{
	color:#898989;
}
.menuRight nav ul li:nth-child(3) a, .menuRight nav ul li:nth-child(4) a{
	color:#24ca68;
}
.menuRight nav ul li:last-child a{
	color: #fff;
}
/*MAIN BANNER*/
.mainBanner{
	background-image: url("../images/helping-people.jpg");
	background-position: center;
	background-size: cover;
	background-color: rgba(0,0,0,0.7);
}


.mainBannerInsideItem h1{
	color:#fff;
	font-size: 2.5rem;
	padding-top: 120px;
	margin-bottom: 35px;
	text-align: center;
}
.mainBannerInsideItem form input{
	border:0;
	outline: 0;
	padding:14px 160px 14px 15px;
	margin-right: 30px;
	border-radius: 5px;
}

.formInside{
	display: flex;
	justify-content: center;
	padding-bottom: 20px;
}
.formInside.submit{
	padding-bottom: 160px;
}
.formInside.submit .subm{
	padding:15px 50px;
	margin:0;
	font-size: 1rem;
	color: #fff;
	background-color: #24ca68;
}
.formInside.submit .subm:hover{
	cursor: pointer;
	background-color: #20b55d;
}
.principal--banner{
	margin-bottom: 17px;
}
/*CLUBE VAKINHA EDUCACAO*/
.vakinha--education--club--section{
	width: 85%;
	margin:auto;
	margin-bottom: 40px;
}
.vakinha--education--club{
	background-color: rgb(0, 106, 59);
	display: flex;
	justify-content: flex-end;
	cursor: pointer;
	padding-right: 35px;
}
.vakinha--education--club--inner--item h1{
	font-size: 2.5rem;
	text-transform: uppercase;
	color: #fff;
}
.vakinha--education--club--inner--item h1 span{
	font-size: 3rem;
}
.vakinha--education--club--inner{
	display: flex;
	margin-top: 30px;
	margin-bottom: 30px;
}
.top{
	width: 290px;
	color: #fff;
	font-weight: bold;
	font-size: 1.3rem;
	text-align: center;
}
.down{
	display: flex;
	justify-content: center;
	margin-top: 10px;
}
.down a{
	background-color: #24ca68;
	color: #fff;
	border-radius: 5px;
	padding:13px 15px;
}
.down a:hover{
	background-color: #20b55d;
}
.vakinha--education--club--inner--item.space{
	margin-right: 100px;
}
/*ARRECADACOES*/
.vakinhaWon{
	width: 80%;
	margin:auto;
	padding-bottom: 30px;
}
.slider--controls{
	display: none;
}
.vakinhaWon h1{
	font-weight: 200;
	color: #434040;
	margin-bottom: 30px;
}
.vakinhaWon h1 span{
	font-weight: 400;
}
.container{
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap:30px;
}
.container--photo img{
	width: 100%;
	height: 30vh;
	object-fit: cover;
}
.container--item{
	cursor: pointer;
	background-color: #fff;
}
.container--item--titulo{
	font-size: 1.2rem;
	font-weight: bold;
	color: #434040;
	padding-left: 15px;
}
.container--item--text{
	display: flex;
}
.container--item--text--left{
	margin-right: 15px;
	color: #434040;
	font-size: 0.9rem;
	padding-left: 15px;
}
.container--item--text--right{
	font-size: 0.9rem;
	color: #434040;
	font-weight: 200;
}
.person--data{
	display: flex;
	padding-top: 15px;
	align-items: center;
	padding-bottom: 10px;
	border-bottom: 1px solid #ddd;
	padding-left: 15px;
}
.person--picture{
	margin-right: 15px;
	width: 50px;
	height: 50px;
	background-color: rgba(0,0,0,0.7);
	border-radius: 50%; 
}
.person--picture img{
	width: 100%;
	height: 100%;
	border-radius: 50%;
	object-fit: cover;
}
.person--name{
	color: #434040;
	font-weight: 700;

}
.earnedMoney{
	margin-top: 6px;
	margin-bottom: 6px;
	color: #434040;
	padding-left: 15px;
}
.percentage{
	display: flex;
	align-items: center;
	padding-left: 15px;
}
.number{
	color: #24ca68;
	font-weight: bold;
	font-size: 1.2rem;
	margin-right: 6px;
	width: 50px;
}
.greenPercentage{
	flex:1;
	margin-right: 15px;
	height: 10px;
	background-color: #28cb67;
	border-radius:10px;
}
.goal{
	color: #434040;
	padding-left: 15px;
	margin-bottom: 15px;
}
/*QUEM JA USOU VAKINHA*/
.whoUsedVakinha{
	background-color: #24a052;
	padding-top: 40px;
	padding-left: 140px;
	padding-right: 140px;
	padding-bottom: 70px;
}
.whoUsedVakinha h1{
	color: #f1f0f0;
	text-align: center;
	font-size: 2.3rem;
	margin-bottom: 30px;
}
.whoUsedVakinha h1 span{
	font-weight: 200;
}
.people--who--used--vakinha{
	display: flex;
	justify-content: center;
}
.people--who--used--vakinha--item{
	margin-right: 50px;
	flex:1;
	display: flex;
	flex-direction: column;
	align-items: center;
}
.people--who--used--vakinha--item:last-child{
	margin-right: 0;
}
/* ... */

